# ParallelStaticObjectDetection

./: CMakeLists.txt  CMakeLists.txt~  GuideLines.txt  ParallelStatic.cpp  README.md  Workingversion1.cpp.cpp  contributors.txt  sequentialStatic.cpp  test  test.cpp
